<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddLocations">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_login_bk"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="15dp"
        android:elevation="12dp"
        android:focusable="true"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_location"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/options_background"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/LocalityLoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_locality"
                        android:inputType="textPostalAddress"
                        android:padding="12dp"
                        android:autofillHints="postalAddress" />
                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/view3"
                    android:layout_marginStart="30dp"
                    android:background="@color/white"
                    android:includeFontPadding="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/locality"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/options_background"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/LocationPinLoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@null"
                        android:backgroundTint="@color/purple_500"
                        android:gravity="center_vertical"
                        android:hint="@string/EnterLocationPin"
                        android:inputType="number"
                        android:padding="10dp"
                        android:autofillHints="postalCode" />
                </LinearLayout>

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/view4"
                    android:layout_marginStart="30dp"
                    android:background="@color/white"
                    android:includeFontPadding="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/location_pin"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/options_background"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/StateSpinnerLoc"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:backgroundTint="@color/purple_500"
                        android:padding="10dp" />
                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/view5"
                    android:layout_marginStart="30dp"
                    android:background="@color/white"
                    android:includeFontPadding="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/select_state"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
            </RelativeLayout>




            <Button
                android:id="@+id/AddLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/add_location"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@null"
        app:title="EasyGo-Admin"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/white" />


</RelativeLayout>
